[package]
name = "speed-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
# Carbon framework is linked directly for hotkeys (no crate needed)

# Window and UI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"

# System integration
clipboard = "0.5"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
dirs = "5.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "speed-reader"
path = "src/main.rs"
