[package]
name = "speeder"
version = "0.1.0"
edition = "2021"

[dependencies]
# Carbon framework is linked directly for hotkeys (no crate needed)

# Window and UI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.29"

# System integration
clipboard = "0.5"
tray-icon = "0.19"
objc = "0.2"  # For setting activation policy (no dock icon)

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
dirs = "5.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "speeder"
path = "src/main.rs"
